2003-11-11  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_i, cm_b, cm_r): do not use lineannotation if we
	are printing indices.

	* makeinfo/insertion.c (cm_insert_copying): removed unnecessary xml
	fix.

	* makeinfo/texinfo.dtd: added OElig and oelig entities.

2003-11-11  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_sp): disabled parameter expansion.

2003-11-10  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c:
	* makeinfo/insertion.c (cm_html): do not process @xml blocks.
	(cm_xml): new function to process @xml.

	* makeinfo/xml.c (xml_start_para, xml_end_para): skip para handling in
	footnote.
	(xml_insert_footnote): keep state in xml_in_footnote variable.

	* makeinfo/texinfo.dtd: updated settitle definition.

2003-11-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Formats): rewrite to fix underfull
	boxes.

2003-11-10  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.tex (\commondummies): added registeredsymbol.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (main): fixed a segfault with --html
	--no-header.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/html.c (html_output_head): output node name in title first.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c:
	* makeinfo/xml.h: new Docbook elements for quotation: tip, note,
	important, warning, caution.

	* makeinfo/xml.c: better font tags for Docbook.
	(xml_insert_quotation): new function that is aware of specialized
	Docbook elements for quotation.
	(xml_insert_entity): use add_char() instead of insert() for correct
	paragraph handling.

	* makeinfo/insertion.c (begin_insertion, end_insertion): use
	xml_insert_quotation() for quotations.
	(cm_quotation): removed quotation element insertion.
	(cm_insert_copying): also work around xml tags.

	* makeinfo/cmds.c (cm_b): really use bold with Docbook.

	* NEWS: @quotation changes.

2003-11-08  Karl Berry  <karl@gnu.org>

        * doc/texinfo.txi (registeredsymbol): new node.
        